apply plugin: "java"

tasks.withType(JavaExec) {
    maxHeapSize = "4096m"
    jvmArgs "-XX:MaxPermSize=512m"
}
sourceCompatibility = 1.7
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets {
	test {
        java {
            srcDir 'src'
        }
        resources {
            srcDir '../core/assets'
        }
    }
    
    
}

eclipse.project {
    name = appName + "-tests"
}
